our values are related to the inner mode, tdf#90979

Change-Id: I5531bbb813f8ace9a9c3f35c6c79777755ff81b8